--- a/last-hearth-landing/src/app/news/news-card/news-card.component.html
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.html
@@ -1,16 +1,28 @@
 <div
     [style.backgroundImage]="data().image ? 'url('+ data().image +')' : 'url(/images/screenshots/screen_1.png)'"
-    class="p-4 sm:p-8 flex sm:flex-row flex-col gap-4 items-start justify-between bg-center bg-cover h-full rounded-xl"
+    class="transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before: before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
 >
-    <div
-        class="relative max-w-full lg:max-w-[60%] p-0.5 sm:p-2 flex flex-col gap-2 before:backdrop-blur-2xl before:absolute before:size-full before:rounded-xl z-10 before:-z-40"
-    >
-        <p class="text-neutral-50 text-xl sm:text-2xl mx-4 my-1">{{ data().title }}</p>
-        <p class="text-neutral-50 text-base font-light mx-4" [innerHtml]="data().description"></p>
-    </div>
     <div class="flex sm:flex-col justify-between gap-4 items-end sm:items-start sm:gap-0 h-full">
-        <div class="relative bg-[#945a32] h-fit px-2 py-1 rounded-xl">
-            <p class="text-white text-xs text-nowrap">{{ data().date}}</p>
+        <div class="p-8 z-20 flex gap-12 items-center justify-between w-full">
+            <div
+                class="shrink-0 relative hidden md:block xl:hidden 2xl:block size-72 shadow-2xl shadow-black/60 overflow-clip rounded-xl"
+            >
+                <img [src]="data().image" class="hidden md:block xl:hidden 2xl:block size-72 object-cover rounded-xl" />
+            </div>
+            <div class="flex flex-col gap-6 w-full items-start">
+                <div class="flex flex-col gap-2 items-start">
+                    <h1 class="text-2xl md:text-4xl uppercase font-bold text-shadow-md text-neutral-100">
+                        {{ data().title }}
+                    </h1>
+                    <span class="bg-[#c35a17] text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl">
+                        {{ data().date }}
+                    </span>
+                </div>
+                <p
+                    class="text-base md:text-xl font-semibold text-shadow-md text-neutral-200"
+                    [innerHTML]="data().description"
+                ></p>
+            </div>
         </div>
     </div>
 </div>
