--- a/last-hearth-landing/src/app/admin/admin.component.html
+++ b/last-hearth-landing/src/app/admin/admin.component.html
@@ -17,7 +17,8 @@ settlements === null || settlements?.length === 0;
     </div>
     <div class="mt-2 flex flex-col gap-4">
         <p class="text-2xl">{{ requestExist ? 'Пусто...' : '' }}</p>
-        @for (item of veriverificationRequests; track $index) { <app-verify-request [data]="item" /> }
+        @for (item of veriverificationRequests; track $index) {
+        <app-verify-request [data]="item" (requestWasWatched)="dataUpdate()" /> }
     </div>
     <div class="flex justify-center items-center gap-1 w-full mt-8">
         <hr class="w-full h-px" />
