--- a/last-hearth-landing/src/app/settlements/create-settlement/create-settlement.component.html
+++ b/last-hearth-landing/src/app/settlements/create-settlement/create-settlement.component.html
@@ -21,7 +21,7 @@
 
         <div class="flex flex-col gap-1">
             <p class="text-xl">Выберите ваш дипломатический статус <span class="text-red-700">*</span></p>
-            <l-input formControlName="diplomacy" [type]="'select'" [items]="users" placeholder="Выберите тип..." />
+            <l-input formControlName="diplomacy" type="select" [items]="diplomacy" placeholder="Выберите тип..." />
             <div class="flex flex-col pl-1">
                 <p class="text-sm">Дипломатический статус должен строго исполняться образованием.</p>
             </div>
@@ -29,7 +29,7 @@
 
         <div class="flex flex-col gap-1">
             <p class="text-xl">Описание или лор образования <span class="text-red-700">*</span></p>
-            <l-input placeholder="Введите историю..." formControlName="description" />
+            <l-input placeholder="Введите историю..." type="textarea" formControlName="description" />
             <p class="text-sm pl-1">
                 Опишите историю или то, чем является ваше образование. Это поможет новым игрокам вступить именно к вам.
             </p>
