LH | feat: прогресс

--- a/last-hearth-landing/src/app/styles/variables.less
+++ b/last-hearth-landing/src/app/styles/variables.less
@@ -1,3 +1,4 @@
 :root {
-    --tui-background-accent-1: var(--color-lh-accent-2);
+    --tui-background-accent-1: var(--lh-accent-2);
+    --tui-background-accent-1-hover: var(--lh-accent);
 }
