LH | feat: прогресс

--- a/last-hearth-landing/src/app/profile/admin/confirm-approve/confirm-approve.component.html
+++ b/last-hearth-landing/src/app/profile/admin/confirm-approve/confirm-approve.component.html
@@ -3,13 +3,13 @@
     <div class="flex gap-4 justify-end">
         <button
             (click)="context.$implicit.complete()"
-            class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-red-600 rounded-lg py-2.5 px-4 hover:bg-red-700 active:bg-red-400"
+            class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-lh-danger rounded-lg py-2.5 px-4 hover:bg-lh-danger-hover active:bg-lh-danger-active"
         >
             ЕЩЕ ПОДУМАТЬ
         </button>
         <button
             (click)="confirmApprove()"
-            class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-green-600 rounded-lg py-2.5 px-4 hover:bg-green-700 active:bg-green-400"
+            class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-lh-success rounded-lg py-2.5 px-4 hover:bg-lh-success-hover active:bg-lh-success-active"
         >
             ОДОБРИТЬ
         </button>
