--- a/last-hearth-landing/src/app/profile/admin/confirm-reject/confirm-reject.component.html
+++ b/last-hearth-landing/src/app/profile/admin/confirm-reject/confirm-reject.component.html
@@ -23,7 +23,7 @@
         <button
             type="submit"
             [disabled]="!form.valid"
-            class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-red-600 rounded-lg py-2.5 px-4 hover:bg-red-700 active:bg-red-400 disabled:bg-red-900 disabled:cursor-default disabled:text-gray-300"
+            class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-lh-danger rounded-lg py-2.5 px-4 hover:bg-lh-danger-hover active:bg-lh-danger-active disabled:bg-red-900 disabled:cursor-default"
         >
             ОТКЛОНИТЬ
         </button>
