--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -1,6 +1,6 @@
 @let leaderBoard = (leaderBoard$ | async)?.entries;
 
-<p class="text-2xl">Статистика:</p>
+<p class="text-3xl lg:text-4xl font-bold mb-8">Статистика:</p>
 
 @if(leaderBoard === null) {
 <tui-loader />
