--- a/last-hearth-landing/src/styles.css
+++ b/last-hearth-landing/src/styles.css
@@ -1,17 +1,21 @@
 @import "tailwindcss";
 
-:root {
-    --lh-primary: #3f3c34;
-    --lh-primary-2: #31302b;
-    --lh-accent: #ff7920;
-    --lh-accent-2: #945a32;
-}
-
 @theme {
     --color-lh-primary: var(--lh-primary);
     --color-lh-primary-2: var(--lh-primary-2);
+
     --color-lh-accent: var(--lh-accent);
     --color-lh-accent-2: var(--lh-accent-2);
+
+    --color-lh-danger: var(--lh-danger);
+    --color-lh-danger-hover: var(--lh-danger-hover);
+    --color-lh-danger-active: var(--lh-danger-active);
+
+    --color-lh-success: var(--lh-success);
+    --color-lh-success-hover: var(--lh-success-hover);
+    --color-lh-success-active: var(--lh-success-active);
+
+    --color-lh-disabled: var(--lh-disabled);
 }
 
 html body {
@@ -36,6 +40,8 @@ a {
     &[data-size="s"] {
         color: #e2d7bb;
     }
+    clip-path: none !important;
+    border-radius: 16px !important;
 }
 
 tui-dialog {
