LH | feat: прогресс

--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
     <div class="flex justify-center xl:justify-start items-center xl:ml-[25%] xl:w-full">
         <div class="h-auto w-full xl:w-[50%] flex">
             <div class="flex size-full justify-center gap-3 mb-10">
-                <div class="main-panel size-full">
+                <div class="main-panel size-full !rounded-2xl">
                     <router-outlet />
                 </div>
             </div>
