--- a/last-hearth-landing/src/app/profile/admin/confirm-reject/confirm-reject.component.html
+++ b/last-hearth-landing/src/app/profile/admin/confirm-reject/confirm-reject.component.html
@@ -16,7 +16,7 @@
     <div class="flex gap-4 justify-end">
         <button
             (click)="context.$implicit.complete()"
-            class="text-lh-primary rounded-lg! text-sm font-bold cursor-pointer mt-2 self-end bg-transparentrounded-lg py-2.5 px-4 hover:bg-neutral-100 active:bg-neutral-100"
+            class="text-lh-primary rounded-lg! text-sm font-bold cursor-pointer mt-2 self-end bg-transparent py-2.5 px-4 hover:bg-neutral-100 active:bg-neutral-100"
         >
             ЕЩЕ ПОДУМАТЬ
         </button>
