--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col gap-8">
+    <p class="text-3xl lg:text-4xl font-bold">Как начать играть?</p>
     <div class="flex gap-8 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">1</p>
         <div class="flex flex-col gap-1">
