--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -1,11 +1,46 @@
 @let leaderBoard = (leaderBoard$ | async)?.entries;
 
-<p class="text-3xl lg:text-4xl font-bold mb-8">Статистика:</p>
+<p class="text-3xl lg:text-4xl font-bold mb-8">Рейтинг игроков</p>
 
 @if(leaderBoard === null) {
 <tui-loader />
 } @if(leaderBoard){
-<table tuiTable [columns]="getNames(leaderBoard)" class="table w-full">
+<tui-tabs [(activeItemIndex)]="activeItemIndex" class="!text-xl mt-4 mb-8 !font-semibold !w-full content-tabs">
+    <button tuiTab type="button" (click)="getDeaths()" class="text-2xl uppercase !font-bold">По смертям</button>
+    <button tuiTab type="button" (click)="getHoursPlayed()" class="text-2xl uppercase !font-bold">По онлайну</button>
+    <button tuiTab type="button" (click)="getKills()" class="text-2xl uppercase !font-bold">По убийствам</button>
+</tui-tabs>
+
+<div class="flex flex-col gap-6">
+    @for (item of leaderBoard; track $index; let odd = $odd;) {
+    <div class="flex gap-4">
+        <div>
+            <div
+                [style.backgroundImage]="odd ? 'url(/1.webp)' : 'url(/3.webp)'"
+                class="size-16 transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
+            >
+                <div class="flex size-full justify-center items-center p-3 z-50">
+                    <p class="text-3xl my-6 uppercase font-bold text-[#bdb093] self-center">{{$index + 1}}</p>
+                </div>
+            </div>
+        </div>
+        <div
+            [style.backgroundImage]="odd ? 'url(/1.webp)' : 'url(/3.webp)'"
+            class="h-16 transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
+        >
+            <div class="flex w-full justify-between gap-6 items-center px-8 p-4 z-50 text-neutral-200 text-2xl">
+                <img src="3.webp" class="size-10 rounded-full" />
+                <p>{{item.name}}</p>
+                <p *ngIf="activeItemIndex === 0">{{item.deaths}}</p>
+                <p *ngIf="activeItemIndex === 1">{{item.hours_played}}</p>
+                <p *ngIf="activeItemIndex === 2">{{item.kills}}</p>
+            </div>
+        </div>
+    </div>
+    }
+</div>
+
+<!-- <table tuiTable [columns]="getNames(leaderBoard)" class="table w-full">
     <thead>
         <tr tuiThGroup>
             <th tuiTh [resizable]="true">Ник</th>
@@ -35,5 +70,5 @@
             <th *tuiCell="'hours_played'" tuiTd>{{ item.hours_played }}</th>
         </tr>
     </tbody>
-</table>
+</table> -->
 }
