--- a/last-hearth-landing/src/app/profile/profile.component.html
+++ b/last-hearth-landing/src/app/profile/profile.component.html
@@ -22,7 +22,12 @@
         <div class="flex flex-col gap-2">
             <p class="text-4xl font-semibold">{{userData.name}}</p>
             <p *ngIf="userName" class="text-3xl font-semibold">[{{userName}}]</p>
-            <p [class.text-red-500!]="getRoleName() === 'Неверифицирован'" class="text-2xl">{{getRoleName()}}</p>
+            <p
+                [class.text-red-500!]="getRoleName() === 'Неверифицирован'"
+                class="text-base uppercase py-1 font-bold text-center bg-lh-accent-2 text-neutral-200 rounded-2xl"
+            >
+                {{getRoleName()}}
+            </p>
             @let details = details$ | async;
             <p *ngIf="details?.status === 'pending'" class="text-2xl">Ваша анкета отправлена. Ожидайте проверки.</p>
             <p *ngIf="details?.status === 'rejected'" class="text-2xl">
